# OmniRoute

./: CONTRIBUTING.md  Makefile  docker-compose.yml
.github/workflows/: ci.yml
apps/retailer-mobile/: README.md  pubspec.yaml
apps/web/: package.json  pnpm-workspace.yaml  turbo.json
docs/: API_DESIGN_FULL.md  ARCHITECTURE.md  CAPABILITIES.md  CLAUDE_CODE_PROMPTS_PART3.md  COMPETITIVE_POSITIONING.md  CREDIT_PAYMENT_MODULE.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  EXTREME_INNOVATION.md  GAP_ANALYSIS_AND_PROMPTS.md  IMPLEMENTATION_PROMPTS.md  NAMING_SUGGESTIONS.md  OmniRoute_Financial_Integration_Prompts.md  OmniRoute_Implementation_Prompts.md  PRD.md  PRODUCT_ROADMAP_FULL.md  README_ORIGINAL.md  REPOSITORY_INTEGRATION_GUIDE.md  SECURITY.md  SERVICE_CREATION_ENVIRONMENT_ARCHITECTURE.md  TECHNICAL_ARCHITECTURE.md  TECH_STACK.md  WEB_FRONTEND_IMPLEMENTATION.md  openapi.yaml
docs/api/: openapi.yaml
docs/technical/: API_REFERENCE.md  INTEGRATION_GUIDE.md
docs/training/: TRAINING_CATALOG.md  VIDEO_TRAINING_SPECS.md
infrastructure/docker/: Dockerfile.go  Dockerfile.pricing-engine  Dockerfile.python
infrastructure/kubernetes/: platform_full.yaml
infrastructure/n8n/: README.md
pkg/: go.mod
pkg/cache/: dragonfly.go
pkg/config/: config.go
pkg/database/: yugabyte.go
services/workflow-compiler/: Cargo.toml
services/workflow-compiler/src/: error.rs  lib.rs  main.rs
services/workflow-compiler/src/compiler/: mod.rs
services/workflow-compiler/src/dsl/: mod.rs
services/workflow-compiler/src/templates/: activity.hbs  workflow.hbs
(+156 files in other folders)
