[package]
name = "workflow-compiler"
version = "0.1.0"
edition = "2021"
authors = ["OmniRoute Team"]
description = "Workflow DSL to Temporal Go code compiler"

[lib]
name = "workflow_compiler"
path = "src/lib.rs"

[[bin]]
name = "workflow-compiler-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Graph algorithms
petgraph = "0.6"

# Template engine
handlebars = "5.0"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compiler_bench"
harness = false
